<resources>
    <string name="app_name">DataBindingValidator</string>
    <string name="nombre">Nombre (*)</string>
    <string name="telefono">Teléfono</string>
    <string name="email">Email</string>
    <string name="password">Contraseña (*)</string>
    <string name="cambiar_visualizacion">Cambiar visualización</string>
    <string name="guardar">Guardar</string>
    <string name="guardando">Guardando</string>
</resources>
