<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="br.com.ilhasoft.support.validation.Validator"/>
        <variable
            name="validator"
            type="Validator" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_margin"
        tools:context=".main.MainActivity">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_margin"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                android:inputType="textPersonName"
                app:validateEmpty="@{true}"
                app:validateType='@{"username"}'
                app:onTextChangedValidator="@{validator}">

                <requestFocus />
            </android.support.design.widget.TextInputEditText>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tilNombre"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefono"
                android:inputType="phone"
                android:maxLength="9"
                app:validateMinLength="@{9}"
                app:validateMaxLength="@{9}"
                app:validateRegex='@{"[6-9][0-9]+"}'
                app:validateMinLengthAutoDismiss="@{true}"
                app:onTextChangedValidator="@{validator}"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tilTelefono"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:validateType='@{"email"}'
                app:onTextChangedValidator="@{validator}"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tilEmail"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
            app:passwordToggleContentDescription="@string/cambiar_visualizacion"
            app:passwordToggleDrawable="@drawable/password_visibility">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:validateEmpty="@{true}"
                app:onTextChangedValidator="@{validator}"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:id="@+id/btnGuardar"
            android:text="@string/guardar"
            android:layout_below="@+id/tilPassword"/>

    </RelativeLayout>

</layout>